Added dummy order page.

--- a/MyLeoRetailer/Views/PostLogin/Barcode/PrintBarcode.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Barcode/PrintBarcode.cshtml
@@ -51,7 +51,7 @@
 
                         <div>
                             <img src="@dt.Barcode_Image_Url" class="img-rounded" style="width: 70%;">
-                            @*<img src="@Model.Barcode.Barcodes[i].Barcode_Image_Url" class="img-rounded" style="width: 100%;">*@
+                            @*<img src="@Model.Barcode.Barcodes[i].Barcode_Image_Url" class="img-rounded" style="width: 100%;">
                         </div>
 
                     </td>
@@ -67,7 +67,7 @@
             <br>
         </div>*@
 
-    <div style="width:100%; overflow:auto;" id="Div_Print">
+    @*<div style="width:100%; overflow:auto;" id="Div_Print">
         <table style="font-size:10px">
             <tr>
                 @{  int i = 0;
@@ -121,9 +121,9 @@
                 <tr />
             </table>
             <br>
-        </div>
+        </div>*@
 
-        @*<div style="width:100%; overflow:auto;" id="Div_Print">
+        <div style="width:100%; overflow:auto;" id="Div_Print">
                 <table style="font-size:10px">
 
                     @{  int k = 0;
@@ -176,7 +176,7 @@
 
                 </table>
                 <br>
-            </div>*@
+            </div>
 
     <div class="row" style="padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px; text-align:center;">
             <div class="btn-group">
