--- a/MyLeoRetailer/Views/PostLogin/Barcode/Barcode.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Barcode/Barcode.cshtml
@@ -47,7 +47,7 @@
                                     <input type="text" class="form-control autocomplete-text" id="textSKU_Code" name="SKU" placeholder="SKU code" value="" data-table="Product_SKU_Mapping" data-col="Product_Id,SKU_Code" data-headernames="SKU" />
                                     <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                     <input type="hidden" id="hdnInventory_Id" value="" name="" class="auto-complete-value" />
-                                    <input type="hidden" id="hdnProduct_SKU" value="" name="Barcode.Product_SKU" class="auto-complete-label" />
+                                    <input type="hidden" id="hdnProduct_SKU" value="@Model.Barcode.Product_SKU" name="Barcode.Product_SKU" class="auto-complete-label" />
                                 </div>
                             </div>
                         </div>
